# cler

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  DBF_INVESTIGATION.md  License  README.md  SoapySDRImpl.md  ai-bringup.md  apt_list.txt  build_wasm.sh  dbf.md  dbf_implementation_report.md  doubly-mapped-buffer-plan-v2.md  doubly-mapped-buffer-plan-v3.md  enhanced_performance_test  enhanced_performance_test.cpp  load_balance_performance_test.cpp  load_balance_test  performance-enhancement-design.md  show_cmake_options.sh  start_demo_server.sh  test_cmake_syntax.sh  test_enhanced_config  test_enhanced_config.cpp
blocks/: CMakeLists.txt  add.hpp  fanout.hpp  gain.hpp  math_complex2magphase.hpp  math_complex_demux.hpp  multistage_resampler.hpp  noise_awgn.hpp  plot_cspectogram.hpp  plot_cspectrum.hpp  plot_spectrum.hpp  plot_timeseries.hpp  polyphase_channelizer.hpp  sink_file.hpp  sink_terminal.hpp  source_chirp.hpp  source_cw.hpp  source_file.hpp  throttle.hpp  throughput.hpp
blocks/ezgmsk_demod/: CMakeLists.txt  _ezgmsk_demod.c  _ezgmsk_demod.h  ezgmsk_demod.hpp
blocks/gui/: CMakeLists.txt
blocks/math/: add.hpp  complex_demux.hpp  gain.hpp
blocks/noise/: awgn.hpp
blocks/plots/: CMakeLists.txt  plot_cspectogram.hpp  plot_cspectrogram.cpp  plot_cspectrogram.hpp  plot_cspectrum.cpp  plot_cspectrum.hpp  plot_timeseries.cpp  plot_timeseries.hpp  spectral_windows.hpp
blocks/sources/: CMakeLists.txt  source_cariboulite.hpp  source_chirp.hpp  source_cw.hpp  source_file.hpp  source_hackrf.hpp
blocks/udp/: CMakeLists.txt  shared.hpp  sink_udp.cpp  sink_udp.hpp  source_udp.cpp  source_udp.hpp  utils.cpp  utils.hpp
blocks/utils/: throttle.hpp
cler_flow/: CMakeLists.txt  CONNECTION_PLAN.md  IMPROVEMENTS.md  LIBRARY_MANAGEMENT.md  plan.md  subplan.md  test_library.cpp  test_library_simple  test_library_simple.cpp  test_parser.cpp  test_vertical_fillet.cpp
cler_flow/docs/: CONNECTION_ROUTING.md
cler_flow/include/: BlockLibrary.hpp  GuiApp.hpp
cler_flow/src/: BlockLibrary.cpp  BlockSpec.cpp  FlowApp.cpp  FlowApp.hpp  FlowCanvas.cpp  FlowCanvas.hpp  GuiApp.cpp  GuiApp.hpp  VisualNode.cpp  VisualNode.hpp  block_cache.cpp  block_cache.hpp  block_library.cpp  block_library.hpp  block_parser.cpp  block_parser.hpp  block_spec.cpp  block_spec.hpp  core_nodes_connections.cpp  flow_app.cpp  flow_app.hpp  flow_canvas.cpp  flow_canvas.hpp  gui_app.cpp  main.cpp  visual_node.cpp  visual_node.hpp
desktop_blocks/: CMakeLists.txt  blob.cpp  blob.hpp
desktop_blocks/adsb/: CMakeLists.txt  README.md  adsb_aggregate.hpp  adsb_coastline_loader.hpp  adsb_decoder.hpp  adsb_types.hpp  cpr.h  modes.c  modes.h  modes_2400.c  modes_2400.h
desktop_blocks/channelizers/: polyphase_channelizer.hpp
desktop_blocks/ezgmsk/: CMakeLists.txt  README.md  _ezgmsk_mod.c  _ezgmsk_mod.h  about.txt  ezgmsk_demod.hpp  ezgmsk_mod.hpp  gmskframegen.c
desktop_blocks/ezgmsk_demod/: _ezgmsk_demod.h  about.txt  ezgmsk_demod.hpp
desktop_blocks/filters/: CMakeLists.txt  kaiser_decim_lpf.hpp  kaiser_lpf.hpp
desktop_blocks/fm/: CMakeLists.txt  fm_demod.hpp
desktop_blocks/gui/: CMakeLists.txt  gui_manager.cpp  gui_manager.hpp
desktop_blocks/math/: add.hpp  complex_demux.hpp  frequency_shift.hpp  gain.hpp
desktop_blocks/misc/: uhd_common.hpp
desktop_blocks/noise/: awgn.hpp
desktop_blocks/plots/: CMakeLists.txt  plot_cspectrogram.cpp  plot_cspectrogram.hpp  plot_cspectrum.cpp  plot_cspectrum.hpp  plot_timeseries.cpp  plot_timeseries.hpp  spectral_windows.hpp
desktop_blocks/resamplers/: multistage_resampler.hpp
desktop_blocks/sinks/: CMakeLists.txt  sink_audio.hpp  sink_file.hpp  sink_file_buffered.hpp  sink_hackrf.hpp  sink_null.hpp  sink_soapysdr.hpp  sink_uhd.hpp
desktop_blocks/sources/: CMakeLists.txt  source_audio_file.hpp  source_cariboulite.hpp  source_chirp.hpp  source_cw.hpp  source_file.hpp  source_hackrf.hpp  source_soapysdr.hpp  source_uhd.hpp  source_uhd_zohar.hpp  source_uhd_zohar_full.hpp
desktop_blocks/udp/: CMakeLists.txt  shared.cpp  shared.hpp  sink_udp.cpp  sink_udp.hpp  source_udp.cpp  source_udp.hpp
desktop_blocks/utils/: fanout.hpp  throttle.hpp  throughput.hpp  usrp_common.hpp
desktop_examples/: CMakeLists.txt  adsb_map.cpp  adsb_receiver.cpp  audio_file_playback.cpp  cariboulite_receiver.cpp  cariboulite_recorder.cpp  cariboulite_spectrum.cpp  flowgraph.cpp  fm_receiver.cpp  fm_receiver_gnuradio.grc  frequency_shift.cpp  hackrf_cw.cpp  hackrf_receiver.cpp  hackrf_spectrum.cpp  hackrf_tx.cpp  hello_world.cpp  mass_spring_damper.cpp  plots.cpp  polyphase_channelizer.cpp  power_detector.hpp  selectable_blocks.cpp  soapysdr_example.cpp  streamlined.cpp  udp.cpp  uhd_device.cpp  usr_tx_example.cpp  usrp_example.cpp  usrp_spectrum.cpp
desktop_examples/ezgmsk/: CMakeLists.txt  analyze.py  circulation.cpp  demod_iq_recording.cpp  main.cpp  mod_demod_simulation.cpp  utils.hpp
desktop_examples/ezgmsk_demod/: CMakeLists.txt  (+1 more)
examples/: CMakeLists.txt  _polyphase_channelizer.cpp  cariboulite_receiver.cpp  embedded_static.cpp  flowgraph.cpp  freqplot.cpp  hackrf_receiver.cpp  hello_world.cpp  mass-spring-damper.cpp  mass_spring_damper.cpp  plot_timeseries.cpp  plots.cpp  polyphase_channelizer.cpp  streamlined.cpp  timeseries.cpp  udp.cpp
performance/: CMakeLists.txt  README.md  cler_throughput  cler_throughput.cpp  debug_threadpool.cpp  perf_fanout_workloads.cpp  perf_read_write_techniques.cpp  perf_simple_linear_flow.cpp  performance_features  performance_features.cpp
tests/: CMakeLists.txt  test_allocators.cpp  test_integration.cpp  test_simple.cpp  test_spsc_cross_platform.cpp  test_spsc_queue.cpp  test_threading_policies.cpp  test_threading_simple.cpp
throughput_comparisons/: CMakeLists.txt  cler_throughput.cpp  cpugov.sh  futuresdr.sh  gnuradio.py
tools/: README.md  cler-validate.py  pyproject.toml  rules.yaml  test_validation.cpp
wasm/: CMakeLists.txt  README.md  build_wasm.sh  test_glfw.cpp  test_simple.cpp
wasm_examples/: .gitignore  CMakeLists.txt  README.md  hello_world_gui.cpp  serve.py  setup_and_build.sh  streamlined_throughput.cpp  template.html
(+219 files in other folders)
