find_package(Threads REQUIRED)

if (CLER_BUILD_BLOCKS_GUI)
    add_executable(hello_world hello_world.cpp)
    target_link_libraries(hello_world PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping hello_world example because CLER_BUILD_BLOCKS_GUI is OFF")
endif()

add_executable(streamlined streamlined.cpp)
target_link_libraries(streamlined PRIVATE cler::cler Threads::Threads)

add_executable(flowgraph flowgraph.cpp)
target_link_libraries(flowgraph PRIVATE cler::cler Threads::Threads)

if (CLER_BUILD_BLOCKS_GUI AND CLER_BUILD_BLOCKS_LIQUID)
    add_executable(plots plots.cpp)
    target_link_libraries(plots PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping plots example because CLER_BUILD_BLOCKS_GUI or CLER_BUILD_BLOCKS_LIQUID is OFF")
endif()

if (CLER_BUILD_BLOCKS_LIQUID)
    add_subdirectory(ezgmsk_demod)
else()
    message(STATUS "Skipping ezgmsk_demod example because CLER_BUILD_BLOCKS_LIQUID is OFF")
endif()

if (CLER_BUILD_BLOCKS_GUI)
    add_executable(mass_spring_damper mass_spring_damper.cpp)
    target_link_libraries(mass_spring_damper PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping mass_spring_damper example because CLER_BUILD_BLOCKS_GUI is OFF")
endif()

if (NOT WIN32)
    add_executable(udp udp.cpp)
    target_link_libraries(udp PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping udp example because this is a Windows build")
endif()

if (CLER_BUILD_BLOCKS_GUI AND CLER_BUILD_BLOCKS_LIQUID)
    add_executable(polyphase_channelizer polyphase_channelizer.cpp)
    target_link_libraries(polyphase_channelizer PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping polyphase_channelizer example because CLER_BUILD_BLOCKS_GUI or CLER_BUILD_BLOCKS_LIQUID is OFF")
endif()

if (CLER_BUILD_BLOCKS_GUI)
    if (CARIBOULITE_FOUND)
        add_executable(cariboulite_spectrum cariboulite_spectrum.cpp)
        target_link_libraries(cariboulite_spectrum PRIVATE cler::cler_desktop_blocks Threads::Threads)
    else()
        message(STATUS "Skipping cariboulite_spectrum example because CARIBOULITE_FOUND is OFF")
    endif()
else()
    message(STATUS "Skipping cariboulite_spectrum example because CLER_BUILD_BLOCKS_GUI is OFF")
endif()

if (CLER_BUILD_BLOCKS_GUI)
    if (HACKRF_FOUND)
        add_executable(hackrf_spectrum hackrf_spectrum.cpp)
        target_link_libraries(hackrf_spectrum PRIVATE cler::cler_desktop_blocks Threads::Threads)
    else()
        message(STATUS "Skipping hackrf_spectrum example because HACKRF_FOUND is OFF")
    endif()
else()
    message(STATUS "Skipping hackrf_spectrum example because CLER_BUILD_BLOCKS_GUI is OFF")
endif()

if (NOT WIN32)
    add_executable(selectable_blocks selectable_blocks.cpp)
    target_link_libraries(selectable_blocks PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping selectable_blocks example because this is a Windows build")
endif()

if (CARIBOULITE_FOUND)
    add_executable(cariboulite_recorder cariboulite_recorder.cpp)
    target_link_libraries(cariboulite_recorder PRIVATE cler::cler_desktop_blocks Threads::Threads)
else()
    message(STATUS "Skipping cariboulite_recorder example because CARIBOULITE_FOUND is OFF")
endif()
